# classmates

./: .pylintrc  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: django-tests.yml  django.yml  pylint.yml
aula1908/: apps.py  tests.py  urls.py  views.py
bar/: admin.py  models.py  tests.py  urls.py  views.py
bar/migrations/: 0001_initial.py  0002_postagem_timestamp.py
boteco/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
boteco/migrations/: 0001_initial.py  0002_perfil_magote.py  0003_postagem_autor_postagem_curtidas_comentario_and_more.py  0004_perfil_foto_perfil.py  0005_rename_user_id_perfil_user.py  0006_alter_comentario_curtidas_alter_postagem_comentarios_and_more.py  0007_remove_postagem_comentarios_comentario_postagem.py  0008_bebida_perfil_bebida_preferida.py  0009_alter_perfil_foto_perfil_alter_postagem_autor.py  0010_tipodecorno_alter_perfil_status.py
magote/: asgi.py  models.py  settings.py  urls.py  wsgi.py
magote/templates/magote/: index.html
meuauth/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
meuauth/migrations/: 0001_initial.py
meuauth/templates/meuauth/: index.html
scripts/: manual_test_auth.py
