[tool.poetry]
name = "magote"
version = "0.1.0"
description = "Uma rede social para pessoas cearenses que se acham a última bolacha do pacote."
authors = ["Felipe Bastos <felipebastos@ifce.edu.br>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
python-dotenv = "^0.20.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "^2.14.5"
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
