[tool.poetry]
name = "magote"
version = "0.1.0"
description = "Uma rede social para pessoas cearenses que se acham a última bolacha do pacote."
authors = ["Felipe Bastos <felipebastos@ifce.edu.br>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
python-dotenv = "^0.20.0"
requests = "^2.28.1"
Pillow = "^9.2.0"
djangorestframework = "^3.13.1"
Markdown = "^3.4.1"
django-filter = "^22.1"
djangorestframework-simplejwt = "^5.2.0"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "2.14.5"
pylint-django = "^2.5.3"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.1"
Faker = "^14.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
